[package]
name = "scripty_bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
anyhow = "1"
uuid = { version = "0.8", features = ["v4"] }
once_cell = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-appender = "0.1"